[gd_scene load_steps=5 format=3 uid="uid://d0ighc5qhf814"]

[ext_resource type="Script" path="res://minigame-jogo-da-memoria/scripts/card.gd" id="1_exw22"]
[ext_resource type="Texture2D" uid="uid://gv27yx1hha6m" path="res://minigame-jogo-da-memoria/sprites/dandelion-flower.png" id="1_gkuv8"]
[ext_resource type="Script" path="res://minigame-jogo-da-memoria/scripts/game_manager.gd" id="1_ktchr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1ehb"]
size = Vector2(512, 512)

[node name="Camera2D" type="Camera2D"]
position = Vector2(686, 386)

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_ktchr")

[node name="Card1" type="Area2D" parent="GameManager"]
position = Vector2(-250, -263)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card1"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card1"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card2" type="Area2D" parent="GameManager"]
position = Vector2(-67, -251)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card2"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card2"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card3" type="Area2D" parent="GameManager"]
position = Vector2(110, -233)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card3"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card3"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card4" type="Area2D" parent="GameManager"]
position = Vector2(298, -245)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card4"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card4"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card5" type="Area2D" parent="GameManager"]
position = Vector2(-253, -119)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card5"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card5"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card6" type="Area2D" parent="GameManager"]
position = Vector2(-97, -98)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card6"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card6"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card7" type="Area2D" parent="GameManager"]
position = Vector2(83, -95)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card7"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card7"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card8" type="Area2D" parent="GameManager"]
position = Vector2(235, -95)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card8"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card8"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card9" type="Area2D" parent="GameManager"]
position = Vector2(-256, 25)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card9"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card9"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card10" type="Area2D" parent="GameManager"]
position = Vector2(-100, 52)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card10"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card10"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card11" type="Area2D" parent="GameManager"]
position = Vector2(68, 55)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card11"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card11"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card12" type="Area2D" parent="GameManager"]
position = Vector2(238, 67)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card12"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card12"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card13" type="Area2D" parent="GameManager"]
position = Vector2(-262, 189)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card13"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card13"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card14" type="Area2D" parent="GameManager"]
position = Vector2(-100, 192)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card14"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card14"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card15" type="Area2D" parent="GameManager"]
position = Vector2(74, 201)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card15"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card15"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="Card16" type="Area2D" parent="GameManager"]
position = Vector2(250, 210)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_exw22")

[node name="Sprite2D" type="Sprite2D" parent="GameManager/Card16"]
texture = ExtResource("1_gkuv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameManager/Card16"]
shape = SubResource("RectangleShape2D_a1ehb")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = -5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -686.0
offset_top = -386.0
offset_right = 686.0
offset_bottom = 386.0
grow_horizontal = 2
grow_vertical = 2
